--- a/index.html
+++ b/index.html
@@ -1,11 +1,75 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
-</head>
-<body>
-	<h1>Hi VS CODE</h1>
-</body>
+<html lang="ru">
+    <head>
+        <Title>Знакомства с HTML тегами Часть 2</Title>
+        <meta http-equiv="Content type" content="text/html;charset=UTF-8" />
+    </head>
+    <body>
+        <h1>Кадет получил ранение в <br> военном колледже Щучинска </h1>
+        <img src="img/c6ef8104b7b243b7946630401283b2c9.jpeg" alt="">
+        <p>Фото:gov.kz<p>
+        <p>
+            <h2>Инцидент произошел 31 июля в момент, когда парень <br> находился в суточном наряде. Военнослужащему оказывается <br> вся необходимая медицинская помощь, передает Zakon.kz.</h2>
+        </p>
+        <p>Как сообщили в пресс-службе Министерства обороны РК, по <br> данному факту начато досудебное расследование. Для установления <br> причин и обстоятельств произошедшего направлена специальная <br> комиссия.</p>
+        <p>
+          <span> Иная информация в соответствии со <a href="https://online.zakon.kz/Document/?doc_id=31575852&pos=3917;-54#pos=3917;-54&sdoc_params=text%3D201%26mode%3Dindoc%26topic_id%3D31575852%26spos%3D1%26tSynonym%3D1%26tShort%3D1%26tSuffix%3D1&sdoc_pos=0">статьей 201</a>  УПК РК не подлежит разглашению в интересах следствия.</span> 
+        </p>
+    </body>
+    <body>
+        <p>08:26, 31 июля 2022</p>
+        <h1>В Казахстане незначительно <br> снизилось число заболевших <br> коронавирусом за сутки</h1>
+        <img src="img/b2946620742a42e29c638f196d4381f1.jpeg" alt="">
+        <h2>Об эпидемиологической ситуации по коронавирусу на 30 июля <br> в Казахстане сообщили в МВК. Больше всего заболевших в Нур-<br>Султане, Алматы и Карагандинской области. В сравнении с <br> предыдущим днем, в стране зафиксировано заболевших <br> меньше на 394 человека, передает Zakon.kz.</h2>
+        <p>За прошедшие сутки зарегистрировано 2713 новых случаев <br> заболевания коронавирусной инфекцией, из них:</p>
+        <ol>
+            <li>в Нур-Султане – 951,</li>
+            <li>в Алматы – 532,</li>
+            <li>в Шымкенте – 64,</li>
+            <li>в Акмолинской области – 120,</li>
+            <li>в Актюбинской области – 41,</li>
+            <li>в Алматинской области – 44,</li>
+            <li>Жетысуской области - 100,</li>
+            <li>в Атырауской области – 49,</li>
+            <li>в ВКО – 27,</li>
+            <li>в Абайской области – 35,</li>
+            <li>в Жамбылской области – 57,</li>
+            <li>в ЗКО – 42,</li>
+            <li>в Карагандинской области – 345,</li>
+            <li>в Улытауской области – 5,</li>
+            <li>в Костанайской области – 66,</li>
+            <li>в Кызылординской области – 73,</li>
+            <li>в Мангистауской области – 24,</li>
+            <li>в Павлодарской области – 68,</li>
+            <li>в СКО – 43,</li>
+            <li>в Туркестанской области – 27.</li>
+        </ol>
+        <p>Всего в стране подтверждено 1 350 180 случаев.</p>
+        <h2>1887 человек выздоровели от коронавирусной <br> инфекции.</h2>
+        <ul>
+            <li>в Нур-Султане – 725,</li>
+            <li>в Алматы – 661,</li>
+            <li>в Шымкенте – 141,</li>
+            <li>в Акмолинской области – 0,</li>
+            <li>в Актюбинской области – 0,</li>
+            <li>в Алматинской области – 0,</li>
+            <li>в Жетысуской области – 0,</li>
+            <li>в Атырауской области – 0,</li>
+            <li>в ВКО – 19,</li>
+            <li>в Абайской области – 24,</li>
+            <li>в Жамбылской области – 0,</li>
+            <li>в ЗКО – 14,</li>
+            <li>в Карагандинской области – 188,</li>
+            <li>в Улытауской области – 24,</li>
+            <li>в Костанайской области – 0,</li>
+            <li>в Кызылординской области – 58,</li>
+            <li>в Мангистауской области – 24,</li>
+            <li>в Павлодарской области – 0,</li>
+            <li>в СКО – 0,</li>
+            <li>в Туркестанской области – 9.</li>
+        </ul>
+        <p>Всего в стране от COVID-19 выздоровели 1 310 513 человек.</p>
+    </body>
 </html>
+
+
